fixes alignment on hanging half width

--- a/public/styles/layouts/_default.scss
+++ b/public/styles/layouts/_default.scss
@@ -28,7 +28,7 @@
 
   figure,
   aside {
-    max-width: $full-width / 2;
+    max-width: ($full-width / 2) - $grid-pad;
     margin-left: $grid-pad;
     margin-right: $grid-pad;
   }
